@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup test unpack
+DEPEND=dev-libs/openssl:0= sys-libs/zlib pcre? ( dev-libs/libpcre ) perl? ( dev-lang/perl:=[-build(-)] ) tk? ( dev-lang/tk:= ) curl? ( net-misc/curl webdav? ( dev-libs/expat ) ) emacs? ( virtual/emacs ) gnome-keyring? ( gnome-base/libgnome-keyring ) app-arch/cpio doc? ( app-text/asciidoc app-text/docbook2X sys-apps/texinfo app-text/xmlto ) nls? ( sys-devel/gettext ) test? ( app-crypt/gnupg ) virtual/pkgconfig
+DESCRIPTION=GIT - the stupid content tracker, the revision control system heavily used by the Linux kernel team
+EAPI=5
+HOMEPAGE=http://www.git-scm.com/
+IUSE=+blksha1 +curl cgi doc emacs gnome-keyring +gpg gtk highlight +iconv mediawiki +nls +pcre +perl +python ppcsha1 tk +threads +webdav xinetd cvs subversion test python_targets_python2_7
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~ia64-hpux ~x86-interix ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=dev-libs/openssl:0= sys-libs/zlib pcre? ( dev-libs/libpcre ) perl? ( dev-lang/perl:=[-build(-)] ) tk? ( dev-lang/tk:= ) curl? ( net-misc/curl webdav? ( dev-libs/expat ) ) emacs? ( virtual/emacs ) gnome-keyring? ( gnome-base/libgnome-keyring ) gpg? ( app-crypt/gnupg ) mediawiki? ( dev-perl/HTML-Tree dev-perl/MediaWiki-API ) perl? ( dev-perl/Error dev-perl/Net-SMTP-SSL dev-perl/Authen-SASL cgi? ( virtual/perl-CGI highlight? ( app-text/highlight ) ) cvs? ( >=dev-vcs/cvsps-2.1:0 dev-perl/DBI dev-perl/DBD-SQLite ) subversion? ( dev-vcs/subversion[-dso,perl] dev-perl/libwww-perl dev-perl/TermReadKey ) ) python? ( gtk? ( >=dev-python/pygtk-2.8[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] >=dev-python/pygtksourceview-2.10.1-r1:2[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] )
+REQUIRED_USE=cgi? ( perl ) cvs? ( perl ) mediawiki? ( perl ) subversion? ( perl ) webdav? ( curl ) gtk? ( python ) python? ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=http://git-core.googlecode.com/files/git-2.3.5.tar.xz mirror://kernel/software/scm/git/git-2.3.5.tar.xz http://git-core.googlecode.com/files/git-manpages-2.3.5.tar.xz mirror://kernel/software/scm/git/git-manpages-2.3.5.tar.xz doc? ( mirror://kernel/software/scm/git/git-htmldocs-2.3.5.tar.xz http://git-core.googlecode.com/files/git-htmldocs-2.3.5.tar.xz )
+_eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	python-single-r1	7a178335dbd6ea7f50ed4e3e1c13c1e4	python-utils-r1	096f8247eae93026af13ab88cf4305cd	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=6e5d64d63d8e9e9383642d856888d4fa
