@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/git
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.318 2015/03/26 13:01:05 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.319 2015/04/01 06:51:53 polynomial-c Exp $
+
+*git-2.3.5 (01 Apr 2015)
+
+  01 Apr 2015; Lars Wendler <polynomial-c@gentoo.org> -git-2.3.3.ebuild,
+  +git-2.3.5.ebuild:
+  Version bump. Removed old.
 
 *git-2.3.4 (26 Mar 2015)
 
